# power-meter-rs

./: Cargo.toml  README.md
include/: power_meter.h
src/: lib.rs  msr_reader.rs  nvml_bindings.rs  nvml_utils.rs  rapl_utils.rs
