[package]
name = "pwrm"
version = "0.1.0"
edition = "2024"
authors = ["Manuel de Castro <manuel@infor.uva.es>"]
repository = "https://github.com/mdccUVa/power-meter-gs"
license = "LGPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "thin"

[dependencies]
env_logger = { version = "0.11.10", default-features = false, features = ["auto-color", "color", "humantime"] }
log = "0.4.29"
